# Video-Processing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vc.c  vc.h
